--- a/RouteFinder/Base.lproj/Main.storyboard
+++ b/RouteFinder/Base.lproj/Main.storyboard
@@ -57,6 +57,10 @@
                                 <constraint firstItem="MhG-dP-leW" firstAttribute="leading" secondItem="kxj-E4-Ic7" secondAttribute="trailing" constant="8" id="gWq-KD-ZrQ"/>
                             </constraints>
                         </view>
+                        <activityIndicatorView key="tableFooterView" hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" id="IJk-Vc-SIk">
+                            <rect key="frame" x="0.0" y="174" width="320" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </activityIndicatorView>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="2pz-XF-uhl" detailTextLabel="1YN-29-c4J" style="IBUITableViewCellStyleSubtitle" id="m0d-ak-lc9">
                                 <rect key="frame" x="0.0" y="130" width="320" height="44"/>
@@ -95,6 +99,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="tQt-TN-PWz"/>
                     <connections>
+                        <outlet property="loadingIndicator" destination="IJk-Vc-SIk" id="qMY-2n-kZ1"/>
                         <outlet property="searchTextField" destination="kxj-E4-Ic7" id="QOL-rh-sw5"/>
                         <outlet property="tableView" destination="mLL-gJ-YKr" id="Hje-WY-Z6y"/>
                     </connections>
@@ -154,12 +159,19 @@
                                     <outlet property="delegate" destination="Ah7-4n-0Wa" id="Lod-3v-SFm"/>
                                 </connections>
                             </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="eBo-cE-KFY">
+                                <rect key="frame" x="0.0" y="140" width="320" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="eBo-cE-KFY" firstAttribute="top" secondItem="XNj-bs-bdK" secondAttribute="bottom" constant="41" id="3rf-EU-bTF"/>
+                            <constraint firstItem="eBo-cE-KFY" firstAttribute="centerX" secondItem="obS-dI-Ena" secondAttribute="centerX" id="65h-4e-rcu"/>
                             <constraint firstItem="obS-dI-Ena" firstAttribute="top" secondItem="XNj-bs-bdK" secondAttribute="bottom" constant="8" id="Cam-he-Ere"/>
                             <constraint firstItem="obS-dI-Ena" firstAttribute="leading" secondItem="6vM-cJ-eLn" secondAttribute="leading" id="FG1-U7-5hh"/>
                             <constraint firstItem="XNj-bs-bdK" firstAttribute="centerX" secondItem="obS-dI-Ena" secondAttribute="centerX" id="KeA-El-pqr"/>
+                            <constraint firstItem="eBo-cE-KFY" firstAttribute="leading" secondItem="obS-dI-Ena" secondAttribute="leading" id="PFM-Ed-WDf"/>
                             <constraint firstItem="XNj-bs-bdK" firstAttribute="top" secondItem="RrH-ev-O7T" secondAttribute="bottom" constant="7" id="TKb-xM-ypZ"/>
                             <constraint firstItem="iQr-7F-O7t" firstAttribute="top" secondItem="obS-dI-Ena" secondAttribute="bottom" id="g8O-SO-cDp"/>
                             <constraint firstAttribute="trailing" secondItem="obS-dI-Ena" secondAttribute="trailing" id="m59-pk-IuM"/>
@@ -169,6 +181,7 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="8hJ-VI-6Pa"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="loadingActivity" destination="eBo-cE-KFY" id="8JR-t8-A6x"/>
                         <outlet property="segmentedControl" destination="XNj-bs-bdK" id="cBl-jc-w2L"/>
                         <outlet property="tableView" destination="obS-dI-Ena" id="JFB-kB-wDr"/>
                     </connections>
